Доработал класс FilmRowMapper и исправил повторный метод от storage Mpa